--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,9 @@
             2,
             4
         ],
-        "quotes": "off"
+        "quotes": "off",
+        "require-jsdoc": "off",
+        "comma-dangle": "off",
+        "object-curly-spacing": "off"
     }
 }
