--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,10 @@
         "quotes": "off",
         "require-jsdoc": "off",
         "comma-dangle": "off",
-        "object-curly-spacing": "off"
+        "object-curly-spacing": "off",
+        "space-before-function-paren": "off",
+        "operator-linebreak": "off",
+        "max-len": "off",
+        "indent": "off"
     }
 }
