--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
         "target": "ES2020",
         "outDir": "scripts/",
         "sourceMap": false,
-        "module": "commonjs",
-        "downlevelIteration": false,
+        "module": "ES2020",
         "lib": [
-            "esnext",
-            "dom"
+            "ESNext",
+            "DOM",
+            "ES6",
+            "ES5"
         ]
     },
     "exclude": [
