--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,16 @@
         "es2020": true
     },
     "extends": [
-        "google"
+        "standard"
     ],
+    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaVersion": 11,
         "sourceType": "module"
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
         "indent": [
             2,
