--- a/package.json
+++ b/package.json
@@ -2,21 +2,7 @@
   "name": "speedtest",
   "version": "1.0.0",
   "description": "",
-  "main": "speedtest.js",
-  "dependencies": {
-    "eslint-config-airbnb-base": "^14.2.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.4.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
-  },
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -29,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/TheFridayInstitute/speedtest/issues"
   },
-  "homepage": "https://github.com/TheFridayInstitute/speedtest#readme"
+  "homepage": "https://github.com/TheFridayInstitute/speedtest#readme",
+  "dependencies": {
+    "typescript-eslint": "0.0.1-alpha.0"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.4.0",
+    "eslint-config-google": "^0.14.0",
+    "typescript": "^3.9.6"
+  }
 }
