Animation loop now updates separately from the draw loop; should fix background update errors.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/TheFridayInstitute/speedtest#readme",
   "dependencies": {
+    "prettier": "^2.0.5",
     "typescript-eslint": "0.0.1-alpha.0"
   },
   "devDependencies": {
