--- a/package.json
+++ b/package.json
@@ -16,15 +16,14 @@
     "url": "https://github.com/TheFridayInstitute/speedtest/issues"
   },
   "homepage": "https://github.com/TheFridayInstitute/speedtest#readme",
-  "dependencies": {
-    "prettier": "^2.0.5",
-    "typescript-eslint": "0.0.1-alpha.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
-    "eslint": "^7.4.0",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint": "^7.6.0",
     "eslint-config-google": "^0.14.0",
-    "typescript": "^3.9.6"
+    "prettier": "^2.0.5",
+    "typescript": "^3.9.7",
+    "typescript-eslint": "0.0.1-alpha.0"
   }
 }
