Added map files.
Updated animation.js to typescript.

Changed smooth animations for html elements to use animateElements.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "ES6",
         "outDir": "scripts/",
-        "sourceMap": false,
+        "sourceMap": true,
         "module": "ES2020",
         "lib": [
             "ES2020",
