--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "unplugin-vue-macros": "^2.12.3",
     "vite": "^5.4.8",
     "vite-plugin-dts": "^4.2.3",
+    "vite-plugin-static-copy": "^2.0.0",
     "vue": "^3.5.11"
   },
   "dependencies": {
